After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704171 - [PATCH] Fix prototype of gdk_device_win32_warp
[PATCH] Fix prototype of gdk_device_win32_warp
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Win32
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-win32 maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-07-13 20:58 UTC by Erik van Pienbroek
Modified: 2013-07-22 12:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1.14 KB, patch)
2013-07-13 20:58 UTC, Erik van Pienbroek
committed Details | Review

Description Erik van Pienbroek 2013-07-13 20:58:09 UTC
Fix prototype of gdk_device_win32_warp

Fixes build failure which started to appear after commit https://git.gnome.org/browse/gtk+/commit/gdk/win32?id=e8b38fedbd8961df4aaaa75b122a06ddc68e75f2
Comment 1 Erik van Pienbroek 2013-07-13 20:58:46 UTC
Created attachment 249074 [details] [review]
Proposed patch
Comment 2 Matthias Clasen 2013-07-15 15:24:58 UTC
Review of attachment 249074 [details] [review]:

looks right
Comment 3 Erik van Pienbroek 2013-07-17 17:40:03 UTC
Could somebody commit this? I don't have a GNOME git account
Comment 4 Kalev Lember 2013-07-22 12:26:48 UTC
Thanks Erik, I've pushed it.