Fix prototype of gdk_device_win32_warp

https://bugzilla.gnome.org/show_bug.cgi?id=704171